<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dateTextView"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/forecastCondDayCodeImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/condTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/condTextView"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tmpMaxTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tmpMaxTextView"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tmpMinTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tmpMinTextView"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

</LinearLayout>